Added the contact page

--- a/contact.html
+++ b/contact.html
@@ -7,5 +7,17 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Contact us</h1>
+    <p>
+      E-mail us at
+      <a href="mailto:croissant@hotmail.com">croissant@hotmail.com</a> for more
+      info
+    </p>
+    <footer>
+      <a href="/">Homepage</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+    </footer>
+  </body>
 </html>
