--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Document</title>
+    <title>The best croissant in Belgium - Croissant.com</title>
+    <meta name="description" content="Taste the best croissant in town" />
   </head>
   <body>
     <h1>Contact us</h1>
@@ -15,9 +16,9 @@
       info
     </p>
     <footer>
-      <a href="/">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="Home">Homepage</a>
+      <a href="/photo.html" title="Photo">Photo</a>
+      <a href="/contact.html" title="Contact">Contact</a>
     </footer>
   </body>
 </html>
