--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Croissant</title>
+    <title>The best croissant in Belgium - Croissant.com /title>
+        <meta name="description" content="Taste the best croissant in town">
   </head>
   <body>
-    <h1>Croissants</h1>
+    <h1>Croissant 🥐 </h1>
     <p>
       Een croissant is een typisch Frans ontbijtbroodje van gerezen zoet
       bladerdeeg dat voor het bakken in de vorm van een halvemaan wordt gerold.
